-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.1
-
Win 7, OS X
-
Toplevels: ed0245e1452f94918853b7d4066c1e5749b74f5d (qtbase/5.4, 23.10.2014) , child widgets: child widgets: 452aae043c196d02a6321ed9dc59e522dc3ac6ad (qtbase/5.5, 21.6.2015, 5.5.1)
Steps:
Build example application and press the "Obj in GraphicsView" button
Actual result:
QMenu is drawn outside the window
Expected result:
QMenu is drawn below the button
- is duplicated by
-
QTBUG-52507 Wrong menu position for QToolButton placed on a scene
-
- Closed
-
- resulted in
-
QTBUG-44509 Quassel crashes in QWidget::mapFromGlobal
-
- Closed
-
| For Gerrit Dashboard: QTBUG-41135 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 97690,6 | Fix QWidget::mapTo/FromGlobal() when embedded in QGraphicsView. | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 114591,6 | Fix global coordinate mapping for child widgets in QGraphicsView. | 5.5 | qt/qtbase | Status: MERGED | -2 | 0 |
| 144753,9 | QWidget::mapTo/FromGlobal(): Rewrite using a QTransform. | 5.6 | qt/qtbase | Status: MERGED | -2 | 0 |